refactor: section label

--- a/automated_subscriptions/automated_subscriptions/custom/subscription_settings.json
+++ b/automated_subscriptions/automated_subscriptions/custom/subscription_settings.json
@@ -5,6 +5,7 @@
             "fieldname": "sb_automated_subscriptions",
             "fieldtype": "Section Break",
             "insert_after": "prorate",
+            "label": "Automated Subscriptions",
             "module": "Automated Subscriptions"
         },
         {
